test/compile-fail/identifier/use-path-segment-keyword/expected.txt
error: could not parse ./test/compile-fail/identifier/use-path-segment-keyword/top.rhdl: unexpected token
  ┌─ ./test/compile-fail/identifier/use-path-segment-keyword/top.rhdl:2:16
  │
2 │     pub struct r#self {}
  │                ^^^^^^ expected any of ["NonKeywordIdentifier", "RawIdentifier"]

